fase4/implementacion/c_ast_descendente/AnalizadorSintacticoTiny.java
/* AnalizadorSintacticoTiny.java */
/* Generated By:JavaCC: Do not edit this line. AnalizadorSintacticoTiny.java */
package c_ast_descendente;
import asint.ClaseSemanticaTiny;
import errors.GestionErroresTiny;
import asint.SintaxisAbstractaTiny.Bloq;
import asint.SintaxisAbstractaTiny.SecDecs;
import asint.SintaxisAbstractaTiny.LDecs;
import asint.SintaxisAbstractaTiny.Dec;
import asint.SintaxisAbstractaTiny.SecIs;
import asint.SintaxisAbstractaTiny.LIs;
import asint.SintaxisAbstractaTiny.I;
import asint.SintaxisAbstractaTiny.ParamFs;
import asint.SintaxisAbstractaTiny.LParamFs;
import asint.SintaxisAbstractaTiny.ParamF;
import asint.SintaxisAbstractaTiny.ParamRs;
import asint.SintaxisAbstractaTiny.LParamRs;
import asint.SintaxisAbstractaTiny.LCampos;
import asint.SintaxisAbstractaTiny.TipoNom;
import asint.SintaxisAbstractaTiny.Tipo;
import asint.SintaxisAbstractaTiny.Exp;
import c_ast_ascendente.UnidadLexica.StringLocalizado;

public class AnalizadorSintacticoTiny implements AnalizadorSintacticoTinyConstants {
   private ClaseSemanticaTiny sem = new ClaseSemanticaTiny();

  final public Bloq analiza() throws ParseException {Bloq prog;
    prog = bloque();
    fin();
{if ("" != null) return prog;}
    throw new Error("Missing return statement in function");
}

  final public void fin() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 0:{
      jj_consume_token(0);
      break;
      }
    case 60:{
      jj_consume_token(60);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public Bloq bloque() throws ParseException {SecDecs secdecs; SecIs secis;
    jj_consume_token(llaveApert);
    secdecs = seccion_declaraciones_opt();
    secis = seccion_instrucciones_opt();
    jj_consume_token(llaveCierre);
{if ("" != null) return sem.bloq(secdecs, secis);}
    throw new Error("Missing return statement in function");
}

  final public SecDecs seccion_declaraciones_opt() throws ParseException {LDecs ldecs;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case bool:
    case INT:
    case real:
    case string:
    case proc:
    case struct:
    case type:
    case identificador:
    case indireccion:{
      ldecs = seccion_declaraciones();
      jj_consume_token(finalAsig);
{if ("" != null) return sem.si_decs(ldecs);}
      break;
      }
    default:
      jj_la1[1] = jj_gen;
{if ("" != null) return sem.no_decs();}
    }
    throw new Error("Missing return statement in function");
}

  final public LDecs seccion_declaraciones() throws ParseException {Dec dec; LDecs r;
    dec = declaracion();
    r = resto_sd(sem.una_dec(dec));
{if ("" != null) return r;}
    throw new Error("Missing return statement in function");
}

  final public LDecs resto_sd(LDecs rh) throws ParseException {Dec dec; LDecs r;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case puntoComa:{
      jj_consume_token(puntoComa);
      dec = declaracion();
      r = resto_sd(sem.muchas_decs(rh, dec));
{if ("" != null) return r;}
      break;
      }
    default:
      jj_la1[2] = jj_gen;
{if ("" != null) return rh;}
    }
    throw new Error("Missing return statement in function");
}

  final public Dec declaracion() throws ParseException {TipoNom tiponom; Token id; ParamFs p; Bloq bloq;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case bool:
    case INT:
    case real:
    case string:
    case struct:
    case identificador:
    case indireccion:{
      tiponom = tipo_nombre();
{if ("" != null) return (Dec)sem.dec_base(tiponom);}
      break;
      }
    case type:{
      jj_consume_token(type);
      tiponom = tipo_nombre();
{if ("" != null) return (Dec)sem.dec_type(tiponom);}
      break;
      }
    case proc:{
      jj_consume_token(proc);
      id = jj_consume_token(identificador);
      p = parametros_formales();
      bloq = bloque();
{if ("" != null) return (Dec)sem.dec_proc(id.image, p, bloq).ponFila(id.beginLine).ponCol(id.beginColumn);}
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public ParamFs parametros_formales() throws ParseException {ParamFs p;
    jj_consume_token(parenApert);
    p = lista_parametros_opt();
    jj_consume_token(parenCierre);
{if ("" != null) return p;}
    throw new Error("Missing return statement in function");
}

  final public ParamFs lista_parametros_opt() throws ParseException {LParamFs lp;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case bool:
    case INT:
    case real:
    case string:
    case struct:
    case identificador:
    case indireccion:{
      lp = lista_parametros();
{if ("" != null) return (ParamFs)sem.si_params_f(lp);}
      break;
      }
    default:
      jj_la1[4] = jj_gen;
{if ("" != null) return (ParamFs)sem.no_params_f();}
    }
    throw new Error("Missing return statement in function");
}

  final public LParamFs lista_parametros() throws ParseException {LParamFs lp; ParamF p;
    p = parametro();
    lp = resto_lp(sem.un_param_f(p));
{if ("" != null) return lp;}
    throw new Error("Missing return statement in function");
}

  final public LParamFs resto_lp(LParamFs rh) throws ParseException {LParamFs lp; ParamF p;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case coma:{
      jj_consume_token(coma);
      p = parametro();
      lp = resto_lp(sem.muchos_params_f(rh, p));
{if ("" != null) return lp;}
      break;
      }
    default:
      jj_la1[5] = jj_gen;
{if ("" != null) return rh;}
    }
    throw new Error("Missing return statement in function");
}

  final public ParamF parametro() throws ParseException {Tipo t; ParamF r;
    t = tipo();
    r = resto_parametro(t);
{if ("" != null) return r;}
    throw new Error("Missing return statement in function");
}

  final public ParamF resto_parametro(Tipo th) throws ParseException {Token id;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case paramRef:{
      jj_consume_token(paramRef);
      id = jj_consume_token(identificador);
{if ("" != null) return (ParamF)sem.si_refparam_f(th, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
      break;
      }
    case identificador:{
      id = jj_consume_token(identificador);
{if ("" != null) return (ParamF)sem.no_refparam_f(th, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public TipoNom tipo_nombre() throws ParseException {Tipo t; Token id;
    t = tipo();
    id = jj_consume_token(identificador);
{if ("" != null) return (TipoNom)sem.tipo_nombre(t, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
}

  final public Tipo tipo() throws ParseException {Tipo t;
    t = tipo0();
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
}

  final public Tipo tipo0() throws ParseException {Tipo t; Tipo r;
    t = tipo1();
    r = resto_tipo0(t);
{if ("" != null) return r;}
    throw new Error("Missing return statement in function");
}

  final public Tipo resto_tipo0(Tipo th) throws ParseException {Tipo r; Token id;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case corcheteApert:{
      jj_consume_token(corcheteApert);
      id = jj_consume_token(literalEntero);
      jj_consume_token(corcheteCierre);
      r = resto_tipo0((Tipo)sem.tipo_array(th, id.image).ponFila(id.beginLine).ponCol(id.beginColumn));
{if ("" != null) return r;}
      break;
      }
    default:
      jj_la1[7] = jj_gen;
{if ("" != null) return th;}
    }
    throw new Error("Missing return statement in function");
}

  final public Tipo tipo1() throws ParseException {Tipo t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case indireccion:{
      jj_consume_token(indireccion);
      t = tipo1();
{if ("" != null) return (Tipo)sem.tipo_indir(t);}
      break;
      }
    case bool:
    case INT:
    case real:
    case string:
    case struct:
    case identificador:{
      t = tipo_base();
{if ("" != null) return t;}
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Tipo tipo_base() throws ParseException {LCampos lc; Token id;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case struct:{
      jj_consume_token(struct);
      jj_consume_token(llaveApert);
      lc = lista_campos();
      jj_consume_token(llaveCierre);
{if ("" != null) return (Tipo)sem.tipo_struct(lc);}
      break;
      }
    case INT:{
      jj_consume_token(INT);
{if ("" != null) return (Tipo)sem.tipo_int();}
      break;
      }
    case real:{
      jj_consume_token(real);
{if ("" != null) return (Tipo)sem.tipo_real();}
      break;
      }
    case bool:{
      jj_consume_token(bool);
{if ("" != null) return (Tipo)sem.tipo_bool();}
      break;
      }
    case string:{
      jj_consume_token(string);
{if ("" != null) return (Tipo)sem.tipo_string();}
      break;
      }
    case identificador:{
      id = jj_consume_token(identificador);
{if ("" != null) return (Tipo)sem.tipo_type(id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public LCampos lista_campos() throws ParseException {TipoNom t; LCampos r;
    t = tipo_nombre();
    r = resto_lc(sem.un_campo(t));
{if ("" != null) return r;}
    throw new Error("Missing return statement in function");
}

  final public LCampos resto_lc(LCampos th) throws ParseException {TipoNom t; LCampos r;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case coma:{
      jj_consume_token(coma);
      t = tipo_nombre();
      r = resto_lc(sem.muchos_campos(th, t));
{if ("" != null) return r;}
      break;
      }
    default:
      jj_la1[10] = jj_gen;
{if ("" != null) return th;}
    }
    throw new Error("Missing return statement in function");
}

  final public SecIs seccion_instrucciones_opt() throws ParseException {LIs secis;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IF:
    case WHILE:
    case NEW:
    case delete:
    case read:
    case write:
    case nl:
    case call:
    case llaveApert:
    case arroba:{
      secis = seccion_instrucciones();
{if ("" != null) return (SecIs)sem.si_ins(secis);}
      break;
      }
    default:
      jj_la1[11] = jj_gen;
{if ("" != null) return (SecIs)sem.no_ins();}
    }
    throw new Error("Missing return statement in function");
}

  final public LIs seccion_instrucciones() throws ParseException {LIs lis;
    lis = lista_instrucciones();
{if ("" != null) return lis;}
    throw new Error("Missing return statement in function");
}

  final public LIs lista_instrucciones() throws ParseException {I i; LIs lis;
    i = instruccion();
    lis = resto_li(sem.una_ins(i));
{if ("" != null) return lis;}
    throw new Error("Missing return statement in function");
}

  final public LIs resto_li(LIs lh) throws ParseException {I i; LIs lis;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case puntoComa:{
      jj_consume_token(puntoComa);
      i = instruccion();
      lis = resto_li(sem.muchas_ins(lh, i));
{if ("" != null) return lis;}
      break;
      }
    default:
      jj_la1[12] = jj_gen;
{if ("" != null) return lh;}
    }
    throw new Error("Missing return statement in function");
}

  final public I instruccion() throws ParseException {Exp e; I i; I r; ParamRs params; Token id; Bloq bloq;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case arroba:{
      jj_consume_token(arroba);
      e = expresion();
{if ("" != null) return (I)sem.ins_eval(e);}
      break;
      }
    case IF:{
      i = if_ins();
      r = resto_ii(i);
{if ("" != null) return r;}
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      e = expresion();
      bloq = bloque();
{if ("" != null) return (I)sem.ins_while(e, bloq);}
      break;
      }
    case read:{
      jj_consume_token(read);
      e = expresion();
{if ("" != null) return (I)sem.ins_read(e);}
      break;
      }
    case write:{
      jj_consume_token(write);
      e = expresion();
{if ("" != null) return (I)sem.ins_write(e);}
      break;
      }
    case nl:{
      jj_consume_token(nl);
{if ("" != null) return (I)sem.ins_nl();}
      break;
      }
    case NEW:{
      jj_consume_token(NEW);
      e = expresion();
{if ("" != null) return (I)sem.ins_new(e);}
      break;
      }
    case delete:{
      jj_consume_token(delete);
      e = expresion();
{if ("" != null) return (I)sem.ins_delete(e);}
      break;
      }
    case call:{
      jj_consume_token(call);
      id = jj_consume_token(identificador);
      params = parametros_reales();
{if ("" != null) return (I)sem.ins_call(id.image, params).ponFila(id.beginLine).ponCol(id.beginColumn);}
      break;
      }
    case llaveApert:{
      bloq = bloque();
{if ("" != null) return (I)sem.ins_bloque(bloq);}
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}
